test/ui/src/compile_fail/std/emit_props_msg.rs
fn main() {
    emit::emit!("template", msg: "template");
}
